--- a/custom_components/multi_sensor/manifest.json
+++ b/custom_components/multi_sensor/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "ISENSIT",
-  "name": "Multi sensor",
+  "name": "ThermIQ MQTT Integration",
   "config_flow": true,
   "dependencies": ["mqtt"],
-  "documentation": "https://github.com/H1Xu/ISENSIT",
-  "issue_tracker": "https://github.com/H1Xu/ISENSIT/issues",
-  "codeowners": ["@H1Xu"],
+  "documentation": "https://github.com/thermiq/thermiq_mqtt-ha",
+  "issue_tracker": "https://github.com/thermiq/thermiq_mqtt-ha/issues",
+  "codeowners": ["@thermiq"],
   "iot_class": "local_push",
-  "version": "1.0.2"
+  "version": "2.0.6"
 }
