--- a/custom_components/multi_sensor/manifest.json
+++ b/custom_components/multi_sensor/manifest.json
@@ -3,7 +3,7 @@
   "name": "multi sensor",
   "codeowners": ["@H1Xu"],
   "config_flow": true,
-  "dependencies": [MQTT],
+  "dependencies": ["mqtt"],
   "documentation": "https://github.com/H1Xu/test-case",
   "homekit": {},
   "iot_class": "cloud_polling",
