--- a/custom_components/multi_sensor/manifest.json
+++ b/custom_components/multi_sensor/manifest.json
@@ -6,7 +6,7 @@
   "dependencies": ["mqtt"],
   "documentation": "https://github.com/H1Xu/test-case",
   "homekit": {},
-  "iot_class": "cloud_polling",
+  "iot_class": "local_push",
   "issue_tracker": "https://github.com/H1Xu/test-case/issues",
   "requirements": [],
   "ssdp": [],
