--- a/custom_components/multi_sensor/manifest.json
+++ b/custom_components/multi_sensor/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "multisensor",
+  "domain": "multi_sensor",
   "name": "ISENSIT",
   "codeowners": ["@H1Xu"],
   "config_flow": true,
