--- a/custom_components/multi_sensor/manifest.json
+++ b/custom_components/multi_sensor/manifest.json
@@ -4,10 +4,10 @@
   "codeowners": ["@H1Xu"],
   "config_flow": true,
   "dependencies": ["mqtt"],
-  "documentation": "https://github.com/H1Xu/test-case",
+  "documentation": "https://github.com/H1Xu/ISENSIT",
   "homekit": {},
   "iot_class": "local_push",
-  "issue_tracker": "https://github.com/H1Xu/test-case/issues",
+  "issue_tracker": "https://github.com/H1Xu/ISENSIT/issues",
   "requirements": [],
   "ssdp": [],
   "version": "1.0.1",
